hero block z-index fix

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -36,6 +36,8 @@ main .hero-wrapper:has(.centered-section-white) {
 }
 
 .hero h1 {
+  position: relative;
+  z-index: 1;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -44,7 +46,7 @@ main .hero-wrapper:has(.centered-section-white) {
 
 .hero picture {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   inset: 0;
   object-fit: cover;
   box-sizing: border-box;
